# mini-data-platform

./: .env  .gitignore  README(2).md  README.md  README2.md  pyproject.toml  setup.sh
.github/workflows/: verify-setup.yml
agent/: __init__.py  chat_cli.py  chat_session.py  cli.py  models.py  rate_limit.py  settings.py
agent/analytics/: postprocess.py
agent/cache/: rag_index.json
agent/config/: metrics.json  platform.json
agent/evals/: latest_results.json  questions.json  run_eval.py
agent/llm/: base.py  json_utils.py  openai_provider.py  provider_factory.py
agent/metadata/: __init__.py  service.py
agent/metrics/: contracts.py
agent/orchestrator/: agent.py
agent/platform/: __init__.py  adapter.py
agent/retrieval/: __init__.py  service.py
agent/reviewer/: __init__.py  reviewer.py
agent/tools/: sql_tools.py
agent/validation/: __init__.py  sql_validator.py
airflow/: airflow.cfg
mini_data_platform.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
scripts/: verify_setup.sh
